# backend-whatdataiamgiving

./: .gitignore  DOCKER_MANAGER.md  README.md  main.py  pyproject.toml  serve.bat
app/: __init__.py  config.py  cors.py  database.py
app/models/: __init__.py  ai_analysis_response.py  terms_check_response.py  terms_request.py  terms_response.py  website_analysis.py
app/routes/: __init__.py  term_and_condition.py
app/services/: ai_analysis.py  analysis_cache.py
app/utils/: __init__.py  terms_and_condition_utils.py
docker/mongodb/: Dockerfile
scripts/: docker_manager.py  launcher.py
