[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4==4.13.4",
    "fastapi[standard]==0.116.1",
    "httpx==0.28.1",
    "pytest==8.4.1",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "rich==14.1.0",
    "swagger-ui==0.1.2",
    "typer==0.16.0",
    "uvicorn==0.35.0",
]
